--- a/visdetect/src/components/Layout/Navbar/navbar.module.css
+++ b/visdetect/src/components/Layout/Navbar/navbar.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+
 	padding: 0 1rem;
 	box-sizing: border-box;
 	height: 4rem;
@@ -12,15 +13,25 @@
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px;
 }
 .logocontainer {
-	height: 2.25rem;
+	width: 10rem;
 	aspect-ratio: 1393/287;
 	position: relative;
 }
 .navlist {
+	align-items: center;
 	display: flex;
+	column-gap: 1rem;
+
 	list-style: none;
+}
+.navlist li a {
+	padding: 0.75rem max(1vw, 0.75rem);
 }
 .navlist a {
 	color: hsl(0, 0%, 0%);
 	text-decoration: none;
+}
+
+.navlist li a:hover {
+	border-bottom: 2px solid hsl(184, 100%, 38%);
 }
