--- a/visdetect/src/components/Layout/Navbar/navbar.module.css
+++ b/visdetect/src/components/Layout/Navbar/navbar.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-
+	z-index: 999;
 	padding: 0 1rem;
 	box-sizing: border-box;
 	height: 4rem;
@@ -11,6 +11,7 @@
 	left: 0;
 	position: fixed;
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 8px;
+	background-color: white;
 }
 .logocontainer {
 	width: 10rem;
